@@ -43,14 +43,14 @@ import com.google.common.collect.Range;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import o.a.c.sidecar.client.shaded.common.NodeSettings;
-import o.a.c.sidecar.client.shaded.common.data.GossipInfoResponse;
-import o.a.c.sidecar.client.shaded.common.data.RingEntry;
-import o.a.c.sidecar.client.shaded.common.data.SchemaResponse;
-import o.a.c.sidecar.client.shaded.common.data.TimeSkewResponse;
-import o.a.c.sidecar.client.shaded.common.data.TokenRangeReplicasResponse;
-import o.a.c.sidecar.client.shaded.common.data.TokenRangeReplicasResponse.ReplicaInfo;
-import o.a.c.sidecar.client.shaded.common.data.TokenRangeReplicasResponse.ReplicaMetadata;
+import o.a.c.sidecar.client.shaded.common.response.GossipInfoResponse;
+import o.a.c.sidecar.client.shaded.common.response.NodeSettings;
+import o.a.c.sidecar.client.shaded.common.response.SchemaResponse;
+import o.a.c.sidecar.client.shaded.common.response.TimeSkewResponse;
+import o.a.c.sidecar.client.shaded.common.response.TokenRangeReplicasResponse;
+import o.a.c.sidecar.client.shaded.common.response.TokenRangeReplicasResponse.ReplicaInfo;
+import o.a.c.sidecar.client.shaded.common.response.TokenRangeReplicasResponse.ReplicaMetadata;
+import o.a.c.sidecar.client.shaded.common.response.data.RingEntry;
 import org.apache.cassandra.bridge.CassandraBridge;
 import org.apache.cassandra.bridge.CassandraBridgeFactory;
 import org.apache.cassandra.bridge.CassandraVersionFeatures;
