@@ -27,17 +27,17 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import io.netty.handler.codec.http.HttpResponseStatus;
-import o.a.c.sidecar.client.shaded.common.data.CreateRestoreJobRequestPayload;
-import o.a.c.sidecar.client.shaded.common.data.CreateRestoreJobResponsePayload;
-import o.a.c.sidecar.client.shaded.common.data.CreateSliceRequestPayload;
-import o.a.c.sidecar.client.shaded.common.data.RestoreJobSummaryResponsePayload;
-import o.a.c.sidecar.client.shaded.common.data.UpdateRestoreJobRequestPayload;
+import o.a.c.sidecar.client.shaded.common.request.CreateRestoreJobSliceRequest;
+import o.a.c.sidecar.client.shaded.common.request.Request;
+import o.a.c.sidecar.client.shaded.common.request.data.CreateRestoreJobRequestPayload;
+import o.a.c.sidecar.client.shaded.common.request.data.CreateRestoreJobResponsePayload;
+import o.a.c.sidecar.client.shaded.common.request.data.CreateSliceRequestPayload;
+import o.a.c.sidecar.client.shaded.common.request.data.RestoreJobSummaryResponsePayload;
+import o.a.c.sidecar.client.shaded.common.request.data.UpdateRestoreJobRequestPayload;
 import org.apache.cassandra.sidecar.client.HttpResponse;
 import org.apache.cassandra.sidecar.client.HttpResponseImpl;
 import org.apache.cassandra.sidecar.client.SidecarClient;
 import org.apache.cassandra.sidecar.client.SidecarInstance;
-import org.apache.cassandra.sidecar.client.request.CreateRestoreJobSliceRequest;
-import org.apache.cassandra.sidecar.client.request.Request;
 import org.apache.cassandra.sidecar.client.retry.RetryAction;
 import org.apache.cassandra.sidecar.client.retry.RetryPolicy;
 import org.apache.cassandra.spark.bulkwriter.JobInfo;
